# 2024-exercises-stage-1

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
.workflow/: test.yml
src/exercise-01/: Makefile  README.md
src/exercise-02/: Makefile  README.md  main.c
src/exercise-03/: Makefile  README.md  tests.c
src/exercise-04/: Makefile  README.md  functions.c  test.c
src/exercise-05/: Makefile  README.md
src/exercise-11/: Makefile  README.md  memory_region.ld
src/exercise-12/: Makefile  README.md  text_address.ld
src/exercise-13/: Makefile  README.md  new_symbol.ld
src/exercise-14/: Makefile  README.md  custom_section.ld
src/exercise-20/: Makefile  README.md  main.c  task_queue.c  task_queue.h
src/exercise-21/: Makefile  README.md  main.c  task_queue.c  task_queue.h
src/exercise-30/: Makefile  README.md  hello.c
src/exercise-31/: Makefile  README.md  factorial.c
src/exercise-32/: Makefile  README.md  reverse_string.c
src/exercise-33/: Makefile  README.md  average.c
src/exercise-34/: Makefile  README.md  linear_search.c
src/exercise-35/: Makefile  README.md  delay.c  hello.c
src/exercise-40/: Makefile  README.md  main.c
src/exercise-41/: Makefile  README.md  main.c
src/exercise-42/: Makefile  README.md  main.c
test/exercise-02/: test.sh
test/exercise-05/: test.sh
test/exercise-11/: test.sh
test/exercise-12/: test.sh
test/exercise-13/: test.sh
test/exercise-14/: test.sh
test/exercise-20/: test.sh
test/exercise-21/: test.sh
test/exercise-30/: test.sh
(+8 files in other folders)
